Layout Issue fixed and improvised

--- a/src/css/responsiveList.css
+++ b/src/css/responsiveList.css
@@ -6,6 +6,9 @@
 .ui-shadow {
 	box-shadow:0 1px 3px !important;
 }
+.ui-header {
+	min-height:42px;
+}
 .ui-bar-a,
 .ui-page-theme-a .ui-bar-inherit,
 html .ui-bar-a .ui-bar-inherit,
@@ -14,29 +17,38 @@ html body .ui-group-theme-a .ui-bar-inherit {
 	background-color: #ffffff;
 }
 @media (min-width:0px){
+	.home-header > .home-title {
+		display:none;
+	}
 	.detailPage > .divider {
 		display:none;
 		padding:0px 0px 0px 0px;
 		border:0px solid black;
 	}
+	.home-title-bar-for-short-screen {
+		display:inherit;
+	}
 }
-@media ( min-width: 650px ) {
+@media ( min-width: 600px ) {
+	.home-header > .home-title {
+		display:block;
+	}
    .detailPage > .ui-listview {
-   		max-width:550px;
+   		max-width:500px;
    		padding:0px;
    		margin:0px auto;
    		position:relative;
    }
    .detailPage > .ui-listview li {
    		float: left;
-		width: 231px; /* 33.3333% incl. 2 x 1.2% margin */
-		margin:5px;
+		width: 206px; /* width = (ui-width - numofcolumn*(2*border + 2*padding + 2*margin))/numofcolumn */
+		margin:5px; /* padding=16,margin=5,border=1*/
 		height: auto; /* 232p *//* border : 1px; 88px padding 4px 20px*/
-		border:0px;
+		border:0px; 
 	}
 	.divider {
 		display:inline-block !important;
-		width:550px !important;
+		width:500px !important;
 		float:left !important;
 		border:solid 0px black !important;
 		border-bottom:solid 1px rgba(0, 0, 0, 0.117647) !important;
@@ -44,8 +56,20 @@ html body .ui-group-theme-a .ui-bar-inherit {
 		padding:0px !important;
 		margin:0px !important;
 	}
+	/*Home screen additional bar*/
+	.home-title-bar-for-short-screen {
+		display:none;
+	}
+	/* collapsible set */
+	.detailPage > .ui-collapsible-set {
+		max-width:500px;
+		margin:0px auto;
+	}
 }
 @media ( min-width: 1000px ) {
+	.home-header > .home-title {
+		display:block;
+	}
    .detailPage > .ui-listview {
    		max-width:950px;
    		padding:0px;
@@ -61,6 +85,15 @@ html body .ui-group-theme-a .ui-bar-inherit {
 	.divider {
 		display:inline-block !important;
 		width:950px !important;
+	}
+	/*Home screen additional bar*/
+	.home-title-bar-for-short-screen {
+		display:none;
+	}
+	/* collapsible set */
+	.detailPage > .ui-collapsible-set {
+		max-width:950px;
+		margin:0px auto;
 	}
 
 }
